--- a/src/app/tic-tac-toe-grid/tic-tac-toe-grid.component.css
+++ b/src/app/tic-tac-toe-grid/tic-tac-toe-grid.component.css
@@ -1,29 +1,46 @@
-.item{
-    width: 58px;
-    height: 60px;
+.content{    
+    display: grid;
+    grid-template-columns: 32.33% 32.33% 32.33%;
+    grid-gap: 5px;
+    padding: 5px;
 
+    /* background-color: aqua; */
+}
+
+.content > div {
+    padding: 25px 0;
+    width: 100%;
+    height: 30px;
     background-color: #16a085;
-    margin: 1px;
+}
 
+.content > div:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.item{
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
-
-    cursor: pointer;
 }
 
 .item h1{
-    font-size: 20px;
+    text-align: center;
     color: #fff;
 }
 
-.content{
-    width: 180px;
-
+.main{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+}
 
-    background-color: aqua;
+div .item.winner{
+    background-color: #c0392b;
+}
+ 
+@media only screen and (min-width: 730px) {
+    .content > div {
+        padding: 30px 0;
+    }
 }
