--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
+    background-color: #010319;
+    color: #fff;
 }
