blockage des cases qui ont déjà été sélectionnées

--- a/src/app/tic-tac-toe-grid/tic-tac-toe-grid.component.css
+++ b/src/app/tic-tac-toe-grid/tic-tac-toe-grid.component.css
@@ -38,6 +38,18 @@
 div .item.winner{
     background-color: #c0392b;
 }
+
+.disableValueOne,
+.disableValueTwo,
+.disableValueThree,
+.disableValueFour,
+.disableValueFive,
+.disableValueSix,
+.disableValueSeven,
+.disableValueEigth,
+.disableValueNine{
+    pointer-events: none;
+}
  
 @media only screen and (min-width: 730px) {
     .content > div {
